--- a/清华大学- 学做小程序（基础+实战）/记录01.md
+++ b/清华大学- 学做小程序（基础+实战）/记录01.md
@@ -1,2 +1,39 @@
-### wxss如何注释
+### 2.2.1
+#### wxss如何注释
 * 加```/**/```
+
+#### ```app.json```的相对路径
+```app.json```只能是相对路径，不能是绝对路径
+```
+{
+  "pages":["pages/about/about"]
+}
+```
+不报错
+```
+{
+  "pages":["/pages/about/about"]
+}
+```
+报错
+
+#### 问题：未实现显示时间的功能
+
+### 2.4.1 
+#### 将组件和元素这两个词等同
+
+#### view元素做容器元素（HTML中div做容器元素）
+
+### 2.5.1
+
+#### 弹性盒子布局
+
+### 2.6.1
+#### 响应式长度单位rpx
+* 目的：就是让元素大小适配不同宽度屏幕
+#### 希望均为屏幕宽高的一半
+* 小程序规定所有设备的屏幕宽高均为750rpx
+
+
+
+
