--- a/清华大学- 学做小程序（基础+实战）/记录01.md
+++ b/清华大学- 学做小程序（基础+实战）/记录01.md
@@ -34,6 +34,47 @@
 #### 希望均为屏幕宽高的一半
 * 小程序规定所有设备的屏幕宽高均为750rpx
 
+### 2.8.1
+
+#### text文本
+* ```<!--text中的内容只能是成文本，其他所有内容会被忽视掉，所以不能在text中加navigator标签-->```
+
+#### 跳转不返回
+* ```open-type="redirect"```，```open-type```默认是```navigate```
+
+#### 在navigator中定义颜色
+* 如果在navigator中定义颜色，则无法实现颜色跳转
+
+### 2.9.1
+
+#### tabBar-对若干一级页面的入口链接
+
+####
+* ```/*设置底部图标选中时的颜色*/```在```app.json```中的
+```
+  "color":"#000",
+  "selectedColor":"#00f"
+```
+
+### 2.10.1
+
+#### 设置标题
+```
+"navigationBarTitleText":"电影周周看"
+```
+
+### 3.1.1
+* 要把count的值渲染输出到视图上显示，通过一个双大括号进行数据绑定的
+* 通过控制台的```AppData```页面，就可以直接查看变量
+
+### 3.3.1
+
+* 当博主有对这个电影标记为强烈推荐时，返回的这个属性的取值为true，那么这个时候渲染生成条件成立，这个元素会被渲染生成
+```
+<text wx:if="{{thisWeekMovie.isHighlyRecommended}}" style="font-size:16px;color:red;">强烈推荐</text>
 
 
+```
+
+* 对于可见性需要频繁切换的时候，我们就不建议使用条件渲染了
 
