--- a/清华大学- 学做小程序（基础+实战）/记录01.md
+++ b/清华大学- 学做小程序（基础+实战）/记录01.md
@@ -78,3 +78,13 @@
 
 * 对于可见性需要频繁切换的时候，我们就不建议使用条件渲染了
 
+### 3.5.1
+* swiper元素用来表示一个滑动容器
+* swiper元素默认高度是150像素高
+* image元素默认高度是240像素高
+* 所以在设置幻灯片宽高时，一般要在swiper元素上统一设置
+
+
+
+
+
