--- a/清华大学- 学做小程序（基础+实战）/记录01.md
+++ b/清华大学- 学做小程序（基础+实战）/记录01.md
@@ -84,7 +84,12 @@
 * image元素默认高度是240像素高
 * 所以在设置幻灯片宽高时，一般要在swiper元素上统一设置
 
+### 3.6.1 
+* 需求一：```swiper```如何默认切换到最后一页
+* 需求二：非本周幻灯片页添加“返回本周”按钮
 
+
+  
 
 
 
