--- a/清华大学- 学做小程序（基础+实战）/记录01.md
+++ b/清华大学- 学做小程序（基础+实战）/记录01.md
@@ -88,8 +88,44 @@
 * 需求一：```swiper```如何默认切换到最后一页
 * 需求二：非本周幻灯片页添加“返回本周”按钮
 
-
+* 这几个方法的作用
+  * ```onLoad```完成数据初始化
+  * ```onShow:```每一次页面显示，都要调用一次
+  * ```onReady```
+  * ```onHide```页面每一次隐藏，都要调用一次
+  * ```onUnload```方法，页面被关闭或卸载，都要调用一次
   
+### 3.7.1 更新数据
+* 利用```setData```
+```
+ onLoad:function(options){
+    this.setData({/*如果没有currentIndex变量，会自动创建该变量 */
+      currentIndex:this.data.weeklyMovieList.length - 1
+    })
+  },
+```
+* 修改数组最后一个元素的名字
+* 视图层相应的更新，不会引起相应的变化
+
+### 3.8.1 事件机制
+
+* 冒泡事件
+* 非冒泡事件
+
+* 前半部分未听懂，
+
+```
+  f0:function(event){
+    this.setData({
+      currentIndex: this.data.weeklyMovieList.length - 1
+    })
+  }
+```
+* ```currentIndex```是指向当前页的，每次点击“返回本页”，都修改其页码☞最后一页
+
+
+
+
 
 
 
