--- a/清华大学- 学做小程序（基础+实战）/记录01.md
+++ b/清华大学- 学做小程序（基础+实战）/记录01.md
@@ -123,6 +123,16 @@
 ```
 * ```currentIndex```是指向当前页的，每次点击“返回本页”，都修改其页码☞最后一页
 
+### 4.1.1 组件的自定义数据属性
+* 需求：从```weekly```页上的电影卡片跳转到电影详情页
+* 新增detail页
+* ```wx.navigateTo()```
+* 如何在逻辑层调用小程序的导航内API来实现页面跳转
+* 参数化的```page path```
+* 组件的自定义
+
+* 希望能显示对应电影的详情信息
+
 
 
 
